@@ -1,4 +1,8 @@
 2006-Nov-14  Heikki Junnila <hjunnila@users.sf.net>
+	* Changed the context menu in monitor to a menu bar for better
+	  accessibility on touch screens.
+
+2006-Nov-14  Heikki Junnila <hjunnila@users.sf.net>
 	* Added support for universes to monitor.
 
 2006-Nov-12  Heikki Junnila <hjunnila@users.sf.net>
